I'm testing 13.0-BETA3 in a Bhyve virtual machine. Whenever I try to resize the file system while it's mounted I get an error from growfs saying the filesystem "is not clean - run fsck.". The fsck error is misleading. The file system is clean and running it does not change anything. For example: ``` root@freebsd:~ # growfs /dev/gpt/storage0 growfs: /dev/gpt/storage0 is not clean - run fsck. root@freebsd:~ # umount /dev/gpt/storage0 root@freebsd:~ # growfs /dev/gpt/storage0 It's strongly recommended to make a backup before growing the file system. OK to grow filesystem on /dev/gpt/storage0 from 35GB to 45GB? [yes/no] yes super-block backups (for fsck_ffs -b #) at: 74266176, 75546624, 76827072, 78107520, 79387968, 80668416, 81948864, 83229312, 84509760, 85790208, 87070656, 88351104, 89631552, 90912000, 92192448, 93472896 ``` In a 12.2-RELEASE vm it works as expected: ``` root@freebsd:~ # growfs /dev/gpt/storage0 Device is mounted read-write; resizing will result in temporary write suspension for /mnt/storage0. It's strongly recommended to make a backup before growing the file system. OK to grow filesystem on /dev/gpt/storage0, mounted on /mnt/storage0, from 1.0GB to 2.0GB? [yes/no] yes super-block backups (for fsck_ffs -b #) at: 2097088, 2621312, 3145536, 3669760 ``` The same occurs if I try the resize on the root volumes. I'm using the images from https://download.freebsd.org/ftp/releases/VM-IMAGES/ and the storage device is a just a disk image.